[package]
name = "tarantella"
version = "0.4.0"
edition = "2018"
authors = ["Dan Chiarlone"]
description = "Tarantella is an incoming package manager for WASM modules meant to be dynamically linked!"
readme = "README.md"
repository = "https://github.com/danbugs/tarantella"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
failure = "0.1.8"
exitfailure = "0.5.1"
toml = "0.5.8"
serde = "1.0.129"
serde_derive = "1.0.129"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip = "0.5"
zip-extensions = "0.6"
log = "0.4.0"
env_logger = "0.8.4"

[[bin]]
name = "tapm"
path ="src/main.rs"